# open-blink

./: .env.example  .gitignore  README.md  docker-compose.local.yaml  docker-compose.yaml  mqtt.Dockerfile  overview.mermaid
detection_service/: .dockerignore  .gitignore  Dockerfile  README.md  capture_test_video.py  docker-compose.yaml  install.sh  main.py  main_test.py  pyproject.toml  requirements.in  requirements.txt  run.sh  settings.py  test_detection.py  torch.Dockerfile
detection_service/detector/: detection.py  detection_service.py  detection_types.py  image_detection.py  model.py  process_image.py  test_image_detection.py  types.py
detection_service/pubsub/: client.py  tcp_ping.py
detection_service/server/: http_server.py
detection_service/shared/: date_utils.py  json_utils.py  log_utils.py  perf_utils.py
detection_service/systemd/: open-blink-detection.service
device_service/: Dockerfile  go.mod  main.go  main.go.bak
device_service/client/: client.go
device_service/config/: config.go
devicecapture/: Dockerfile  README.md  TODO.md  devices.json  docker-compose.test.yaml  docker-compose.yaml  go.mod  go.sum  install.sh  main.go  mockdevice.Dockerfile  sqlc.yaml
devicecapture/client/: client.go  repo.go
devicecapture/config/: config.go
devicecapture/device/: api.go  api_test.go  device.go
devicecapture/docker/: Dockerfile  deviceserver.Dockerfile  init-databases.sql  mockdevice.Dockerfile  publisher.Dockerfile  test.Dockerfile
devicecapture/pubsub/: pubsub.go  receiver.go  receiver_test.go
images/: output-1-1760389724375_meta.json
(+71 files in other folders)
